<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="0dp">

        <View
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_weight="4"
            android:gravity="right"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/personfirstname"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="0dp">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_weight="4"
            android:gravity="right"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/personlastname"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="0dp">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_weight="4"
            android:gravity="right"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/persongender"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            />
    </LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/showLifeEvents"
        android:id="@+id/lifeEventsButton"
        />

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/recycler_life_events"-->
        <!--android:scrollbars="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:nestedScrollingEnabled="true"/>-->
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/showFamily"
        android:id="@+id/familyButton"
        />
    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/recycler_family"-->
        <!--android:scrollbars="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:nestedScrollingEnabled="true"/>-->
</LinearLayout>

</android.support.constraint.ConstraintLayout>